--- a/neuron-camera.html
+++ b/neuron-camera.html
@@ -20,8 +20,7 @@
   <template>
 
 	<div id="videostream">
-	  <video id="basicStream" class="videostream" width="{{width}}" height="{{height}}" autoplay="" style="display:none;"></video>
-      <canvas id="c1" width="{{width}}" height="{{height}}" style="display:none;"/>
+	  <video id="basicStream" class="videostream" width="{{width}}" height="{{height}}" autoplay=""></video>
 	</div>
 	<div id="buttons">
 	  <button on-tap="startVideo">Capture video</button>
