--- a/neuron-camera.html
+++ b/neuron-camera.html
@@ -1,3 +1,4 @@
+<link rel="import" href="/bower_components/polymer/polymer.html">
 <dom-module id="neuron-camera">
   <style>
 	  :host{
@@ -18,13 +19,13 @@
 	  }
 	</style>
   <template>
-
+	  <button onclick="doStart()">DO START</button>
+	  <button on-tap="start">Start</button>
+	  <button on-tap="stop">Stop</button>
 	<div id="videostream">
-	  <video id="basicStream" class="videostream" width="{{width}}" height="{{height}}" autoplay=""></video>
+	  <video id="camera" class="videostream" width="{{width}}" height="{{height}}" autoplay=""></video>
 	</div>
 	<div id="buttons">
-	  <button on-tap="startVideo">Capture video</button>
-	  <button on-tap="stopVideo">Stop</button>
 	</div>
   </template>
 </dom-module>
